fix padding so it would scale on smaller screens

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,7 +17,7 @@ body {
 header {
 	background-color: var(--primary-color);
 	color: var(--secondary-color);
-	padding: 9rem 8rem;
+	padding: min(9rem, 20vw) min(8rem, 4vw);
 	* {
 		margin-bottom: 2rem;
 	}
